; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/kernel/extr_drivers.c_alloc_tree_node.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/kernel/extr_drivers.c_alloc_tree_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parisc_device = type { i32 }
%struct.device = type { i32 }
%struct.match_id_data = type { i8, %struct.parisc_device* }

@match_by_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.parisc_device* (%struct.device*, i8)* @alloc_tree_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.parisc_device* @alloc_tree_node(%struct.device* %0, i8 signext %1) #0 {
  %3 = alloca %struct.parisc_device*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca i8, align 1
  %6 = alloca %struct.match_id_data, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i8 %1, i8* %5, align 1
  %7 = getelementptr inbounds %struct.match_id_data, %struct.match_id_data* %6, i32 0, i32 0
  %8 = load i8, i8* %5, align 1
  store i8 %8, i8* %7, align 8
  %9 = getelementptr inbounds %struct.match_id_data, %struct.match_id_data* %6, i32 0, i32 1
  store %struct.parisc_device* null, %struct.parisc_device** %9, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = load i32, i32* @match_by_id, align 4
  %12 = call i64 @device_for_each_child(%struct.device* %10, %struct.match_id_data* %6, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.match_id_data, %struct.match_id_data* %6, i32 0, i32 1
  %16 = load %struct.parisc_device*, %struct.parisc_device** %15, align 8
  store %struct.parisc_device* %16, %struct.parisc_device** %3, align 8
  br label %21

17:                                               ; preds = %2
  %18 = load i8, i8* %5, align 1
  %19 = load %struct.device*, %struct.device** %4, align 8
  %20 = call %struct.parisc_device* @create_tree_node(i8 signext %18, %struct.device* %19)
  store %struct.parisc_device* %20, %struct.parisc_device** %3, align 8
  br label %21

21:                                               ; preds = %17, %14
  %22 = load %struct.parisc_device*, %struct.parisc_device** %3, align 8
  ret %struct.parisc_device* %22
}

declare dso_local i64 @device_for_each_child(%struct.device*, %struct.match_id_data*, i32) #1

declare dso_local %struct.parisc_device* @create_tree_node(i8 signext, %struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
